Compute OS and flag churn

--- a/notebooks/etl.ipynb
+++ b/notebooks/etl.ipynb
@@ -28,10 +28,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "import findspark\n",
     "findspark.init()\n",
     "\n",
@@ -43,12 +45,15 @@
     "from pyspark.sql.functions import desc\n",
     "from pyspark.sql.functions import asc\n",
     "from pyspark.sql.functions import sum as Fsum\n",
-    "from pyspark.sql.functions import count as Fcount\n"
+    "from pyspark.sql.functions import count as Fcount\n",
+    "from pyspark.sql.functions import min as Fmin\n",
+    "from pyspark.sql.functions import max as Fmax\n",
+    "from pyspark.sql.window import Window\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -643,39 +648,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.filter(df.auth.isin(['Logged Out', 'Guest']) == False)"
+   ]
+  },
+  {
+   "source": [
+    "def detect_os(column):\n",
+    "    detect = re.findall(r'\\((\\w+)', column)[0]\n",
+    "    if detect in ['iPhone', 'iPad', 'Macintosh']:\n",
+    "        return 'Apple'\n",
+    "    elif detect in ['Windows', 'compatible']:\n",
+    "        return'Microsoft'\n",
+    "    elif detect in ['X11']:\n",
+    "        return'Linux'\n",
+    "    else:\n",
+    "        return 'Not Detected'\n",
+    "\n",
+    "detect_os_udf = udf(detect_os)\n",
+    "df = df.withColumn('platform', detect_os_udf(df.userAgent)).withColumn('ageHours', (df.ts - df.registration)/3600000)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 9,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "+------+----+---------+------+-------------+--------+------+-----+--------+------+----+------------+---------+----+------+---+---------+------+\n|artist|auth|firstName|gender|itemInSession|lastName|length|level|location|method|page|registration|sessionId|song|status| ts|userAgent|userId|\n+------+----+---------+------+-------------+--------+------+-----+--------+------+----+------------+---------+----+------+---+---------+------+\n+------+----+---------+------+-------------+--------+------+-----+--------+------+----+------------+---------+----+------+---+---------+------+\n\n"
+      "+------+---------+---------+------+-------------+---------+------+-----+--------------------+------+--------------------+-------------+---------+----+------+-------------+--------------------+------+---------+------------------+---------+-------+\n|artist|     auth|firstName|gender|itemInSession| lastName|length|level|            location|method|                page| registration|sessionId|song|status|           ts|           userAgent|userId| platform|          ageHours|ChurnFlag|Churned|\n+------+---------+---------+------+-------------+---------+------+-----+--------------------+------+--------------------+-------------+---------+----+------+-------------+--------------------+------+---------+------------------+---------+-------+\n|  null|Cancelled| Darianna|     F|           67|Carpenter|  null| free|Bridgeport-Stamfo...|   GET|Cancellation Conf...|1538016340000|      166|null|   200|1539254318000|\"Mozilla/5.0 (iPh...|100010|    Apple| 343.8827777777778|        1|      1|\n|  null|Cancelled|  Dominic|     M|          138|   Torres|  null| paid|Chicago-Napervill...|   GET|Cancellation Conf...|1536269906000|      239|null|   200|1540877026000|\"Mozilla/5.0 (iPh...|200002|    Apple|1279.7555555555555|        1|      1|\n|  null|Cancelled| Angelynn|     F|           20|   Coffey|  null| paid|Allentown-Bethleh...|   GET|Cancellation Conf...|1536885688000|     1228|null|   200|1539187234000|\"Mozilla/5.0 (Mac...|   296|    Apple| 639.3183333333334|        1|      1|\n|  null|Cancelled|   Nicole|     F|           44|     Beck|  null| paid|Vineland-Bridgeto...|   GET|Cancellation Conf...|1532224335000|     3475|null|   200|1541948983000|\"Mozilla/5.0 (Mac...|   124|    Apple| 2701.291111111111|        1|      1|\n|  null|Cancelled|    Ethan|     M|          180|  Johnson|  null| paid|Lexington-Fayette...|   GET|Cancellation Conf...|1538080987000|     1443|null|   200|1539709266000|\"Mozilla/5.0 (Win...|    51|Microsoft| 452.2997222222222|        1|      1|\n|  null|Cancelled|    Wyatt|     M|           59|Blackwell|  null| free|     Columbus, GA-AL|   GET|Cancellation Conf...|1536671185000|      362|null|   200|1540347849000|\"Mozilla/5.0 (iPh...|200037|    Apple|1021.2955555555556|        1|      1|\n|  null|Cancelled|     Jean|     M|          218|  Bennett|  null| paid|New Orleans-Metai...|   GET|Cancellation Conf...|1537953130000|     2922|null|   200|1541087401000|Mozilla/5.0 (Wind...|   234|Microsoft| 870.6308333333334|        1|      1|\n|  null|Cancelled|    Alexi|     F|            7|   Warren|  null| paid|Spokane-Spokane V...|   GET|Cancellation Conf...|1532482662000|     1010|null|   200|1538987586000|Mozilla/5.0 (Wind...|    54|Microsoft|1806.9233333333334|        1|      1|\n|  null|Cancelled|  Rodrigo|     M|          239|    Carey|  null| paid|New York-Newark-J...|   GET|Cancellation Conf...|1535389443000|      237|null|   200|1540103857000|\"Mozilla/5.0 (Win...|100014|Microsoft|1309.5594444444444|        1|      1|\n|  null|Cancelled|    Sadie|     F|            3|    Jones|  null| paid|Denver-Aurora-Lak...|   GET|Cancellation Conf...|1537054553000|      659|null|   200|1539041513000|\"Mozilla/5.0 (Mac...|   132|    Apple| 551.9333333333333|        1|      1|\n|  null|Cancelled|   Oliver|     M|           17|      Fry|  null| free|San Francisco-Oak...|   GET|Cancellation Conf...|1538048434000|     1035|null|   200|1539016481000|\"Mozilla/5.0 (Mac...|   154|    Apple|268.90194444444444|        1|      1|\n|  null|Cancelled|    Isaac|     M|          193|   Miller|  null| paid|Seattle-Tacoma-Be...|   GET|Cancellation Conf...|1538201832000|      862|null|   200|1538800531000|Mozilla/5.0 (Wind...|   200|Microsoft|166.30527777777777|        1|      1|\n|  null|Cancelled|      Zoe|     F|           94|    Patel|  null| paid|Providence-Warwic...|   GET|Cancellation Conf...|1532554781000|     3700|null|   200|1543018922000|Mozilla/5.0 (Wind...|    11|Microsoft|2906.7058333333334|        1|      1|\n|  null|Cancelled|   Wesley|     M|          436| Thornton|  null| paid|Deltona-Daytona B...|   GET|Cancellation Conf...|1536659447000|     4253|null|   200|1543337414000|\"Mozilla/5.0 (Mac...|    34|    Apple|1854.9908333333333|        1|      1|\n|  null|Logged In|   Lakyla|     F|           58|   Porter|  null| paid|         Modesto, CA|   PUT|              Cancel|1535849930000|     3368|null|   307|1542055421000|Mozilla/5.0 (Wind...|   162|Microsoft|         1723.7475|        0|      1|\n|  null|Cancelled|   Lakyla|     F|           59|   Porter|  null| paid|         Modesto, CA|   GET|Cancellation Conf...|1535849930000|     3368|null|   200|1542055421000|Mozilla/5.0 (Wind...|   162|Microsoft|         1723.7475|        1|      1|\n|  null|Cancelled|   Justyn|     M|           68|     Cruz|  null| paid|           Akron, OH|   GET|Cancellation Conf...|1534713653000|      446|null|   200|1541408793000|\"Mozilla/5.0 (Mac...|200013|    Apple|1859.7611111111112|        1|      1|\n|  null|Cancelled|   Teagan|     F|           48|  Roberts|  null| paid|New Philadelphia-...|   GET|Cancellation Conf...|1537634865000|     1927|null|   200|1539968001000|Mozilla/5.0 (Wind...|    28|Microsoft| 648.0933333333334|        1|      1|\n|  null|Cancelled|  Brayden|     M|           28|   Thomas|  null| paid|Los Angeles-Long ...|   GET|Cancellation Conf...|1534133898000|     4723|null|   200|1543570037000|\"Mozilla/5.0 (Mac...|    85|    Apple|2621.1497222222224|        1|      1|\n|  null|Cancelled|     Emma|     F|           41|      Lee|  null| paid|   Winston-Salem, NC|   GET|Cancellation Conf...|1536597540000|     2575|null|   200|1541147487000|\"Mozilla/5.0 (Win...|    16|Microsoft|1263.8741666666667|        1|      1|\n+------+---------+---------+------+-------------+---------+------+-----+--------------------+------+--------------------+-------------+---------+----+------+-------------+--------------------+------+---------+------------------+---------+-------+\nonly showing top 20 rows\n\n"
      ]
     }
    ],
    "source": [
-    "def clean_data(df):\n",
-    "    "
+    "flag_cancellation_event = udf(lambda x: 1 if x == \"Cancellation Confirmation\" else 0, IntegerType())\n",
+    "df_churn = df.withColumn('ChurnFlag', flag_cancellation_event('page'))\n",
+    "windowed = Window.partitionBy('userId').orderBy(asc('ts')).rangeBetween(Window.unboundedPreceding, 0)\n",
+    "df_churn = df_churn.withColumn('Churned', Fsum('ChurnFlag').over(windowed))\n",
+    "df_churn.filter(df_churn.Churned == 1).show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 79
-    }
-   ],
-   "source": []
   }
  ]
 }
