Clean up local notebook and add documentation

--- a/notebooks/local.ipynb
+++ b/notebooks/local.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,13 @@
    ]
   },
   {
+   "source": [
+    "# Load Dataset"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -80,7 +87,14 @@
   },
   {
    "source": [
-    "# EDA"
+    "# Exploratory Data Analysis"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Investigate columns"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -108,6 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Remove columns that are unlikely to be valuable\n",
     "valuable_columns = ['artist', 'auth', 'gender', 'itemInSession', 'level', 'location', 'page', 'registration', 'sessionId', 'song', 'status', 'ts', 'userAgent', 'userId']\n",
     "df = df.select(valuable_columns)"
    ]
@@ -485,6 +500,13 @@
    ]
   },
   {
+   "source": [
+    "## Investigate missing values"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -573,7 +595,7 @@
     "# Clean data\n",
     "\n",
     "As there is no value in looking at users that are not logged in for churn analysis - their entries will be disregarded. \n",
-    "The empty `Artist`, `Song` and `Length` values will not be removed, as the rest of their rows provide valuable data."
+    "The empty `Artist`, `Song` and `Length` values will not be removed, as the rest of their rows may provide valuable data."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -589,7 +611,25 @@
   },
   {
    "source": [
+    "# Feature Engineering"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "def detect_os(column):\n",
+    "    '''\n",
+    "        summary:\n",
+    "            Transformes the userId userAgent column into the platform used by the user\n",
+    "            * Microsoft\n",
+    "            * Apple\n",
+    "            * Linux\n",
+    "        args:\n",
+    "            column - column to be transformed\n",
+    "        returns:\n",
+    "            Name of the platform used\n",
+    "    '''\n",
     "    detect = re.findall(r'\\((\\w+)', column)[0]\n",
     "    if detect in ['iPhone', 'iPad', 'Macintosh']:\n",
     "        return 'Apple'\n",
@@ -601,7 +641,11 @@
     "        return 'Not Detected'\n",
     "\n",
     "detect_os_udf = udf(detect_os)\n",
-    "df = df.withColumn('platform', detect_os_udf(df.userAgent)).withColumn('ageHours', (df.ts - df.registration)/3600000).drop('userAgent')\n",
+    "\n",
+    "# Create platform and age in hours column\n",
+    "df = df.withColumn('platform', detect_os_udf(df.userAgent))\\\n",
+    "        .withColumn('ageHours', (df.ts - df.registration)/3600000)\\\n",
+    "        .drop('userAgent')\n",
     "\n",
     "df = df.withColumn('levelNr', when(\n",
     "    col('level') == 'paid', 1)\n",
@@ -612,6 +656,15 @@
    "metadata": {},
    "execution_count": 11,
    "outputs": []
+  },
+  {
+   "source": [
+    "## Define and flag churn\n",
+    "\n",
+    "Churn defined as having a `Cancellation Confirmation` page visit"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -642,6 +695,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Flag the last month of user data per user\n",
+    "\n",
     "user_level = df_churn.groupBy('userId')\\\n",
     "                .agg(\n",
     "                    Fmax('ts').alias('latestSession'), \n",
@@ -667,6 +722,8 @@
     }
    ],
    "source": [
+    "# Aggregate on user level\n",
+    "\n",
     "df_last_month = df_churn\\\n",
     "    .filter(col('lastMonth') == True)\\\n",
     "    .groupBy(['userId', 'gender', 'platform', 'Churned'])\\\n",
@@ -715,6 +772,8 @@
     }
    ],
    "source": [
+    "# Aggregate on group level to find meaningful features\n",
+    "\n",
     "df_last_month.groupBy('Churned')\\\n",
     "    .agg(\n",
     "        Fcount('userId').alias('total'),\n",
@@ -739,7 +798,7 @@
   },
   {
    "source": [
-    "## EDA results\n",
+    "## EDA & Feature Engineering results\n",
     "\n",
     "|         | Not Churned | Churned |\n",
     "|---------|-------------|---------|\n",
@@ -759,8 +818,7 @@
   },
   {
    "source": [
-    "# Feature Engineering\n",
-    "## Selected features\n",
+    "## Select and transform valuable features\n",
     "\n",
     "* Platform\n",
     "* Level\n",
@@ -823,6 +881,16 @@
    "outputs": [],
    "source": [
     "def run_pipeline(model, param_grid, data):\n",
+    "    '''\n",
+    "        summary:\n",
+    "            Runs the pipeline for the provided model based on the provided parameter grid.\n",
+    "        args:\n",
+    "            model - model to be trained\n",
+    "            param_grid - parameter grid that is to be evaluated\n",
+    "            data - training data set to use\n",
+    "        returns:\n",
+    "            trained_model - the trained model\n",
+    "    '''\n",
     "    pipeline = Pipeline(stages = [assembler, scaler, model])\n",
     "    crossval = CrossValidator(\n",
     "        estimator=pipeline,\n",
@@ -833,6 +901,16 @@
     "    return trained_model\n",
     "\n",
     "def evaluate_model(model, data):\n",
+    "    '''\n",
+    "        summary:\n",
+    "            Evaluates the performance of a model using the f1-score.\n",
+    "        args:\n",
+    "            model - model to be evaluated\n",
+    "            data - test data set to use\n",
+    "        returns:\n",
+    "            score - f1-score of the model\n",
+    "            confustion_matrix - confusion matrix of the model\n",
+    "    '''\n",
     "    evaluator = MulticlassClassificationEvaluator(metricName= 'f1')\n",
     "    predictions = model.transform(data)\n",
     "\n",
@@ -845,29 +923,36 @@
    ]
   },
   {
+   "source": [
+    "## Model 1: Logistic Regression"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The score for the logistic regression is 0.7224\n"
+      "The score for the logistic regression is 0.6939\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "   label  0.0  1.0\n",
-       "0      0   63  NaN\n",
-       "1      1   16  1.0"
+       "   label  0.0\n",
+       "0      0   63\n",
+       "1      1   17"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>0.0</th>\n      <th>1.0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>63</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>16</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>0.0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>63</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>17</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 101
+     "execution_count": 19
     }
    ],
    "source": [
@@ -884,29 +969,23 @@
    ]
   },
   {
+   "source": [
+    "## Model 2: Random Forest"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The score for the random forest is 0.7452158045065058\n"
+      "The score for the random forest is 0.7657\nBest numTrees: 15\nBest maxBins: 16\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   label  0.0  1.0\n",
-       "0      0   63  NaN\n",
-       "1      1   16  1.0"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>0.0</th>\n      <th>1.0</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>63</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>16</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 89
     }
    ],
    "source": [
@@ -928,15 +1007,22 @@
    ]
   },
   {
+   "source": [
+    "## Model 3: Gradient Boost Classifier"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The score for the gradient boost is 0.7655458089668616\nBest maxIter: 10\nBest stepSize: 0.1\n"
+      "The score for the gradient boost is 0.7250\nBest maxIter: 5\nBest stepSize: 0.01\n"
      ]
     }
    ],
@@ -959,15 +1045,22 @@
    ]
   },
   {
+   "source": [
+    "## Model 4: Multilayer Perceptron"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "The score for the multiplayer perceptron is 0.8102272727272727\nBest layer configuration: [5, 4, 2]\nBest block size: 32\n"
+      "The score for the multiplayer perceptron is 0.7849\nBest layer configuration: [5, 4, 4, 2]\nBest block size: 64\n"
      ]
     }
    ],
@@ -988,6 +1081,23 @@
     "print(f'Best layer configuration: {mp_model.bestModel.stages[2].getLayers()}')\n",
     "print(f'Best block size: {mp_model.bestModel.stages[2].getBlockSize()}')"
    ]
+  },
+  {
+   "source": [
+    "# Closing words\n",
+    "\n",
+    "The multilayer perceptron seems to be performing the best on the small dataset used here with an f1-score of 0.785. \n",
+    "The configuration used to achieve these results are :\n",
+    "* 5 nodes in the input layer\n",
+    "* 4 nodes in the first intermediate layer\n",
+    "* 4 nodes in the second intermediate layer\n",
+    "* 2 nodes in the output layer\n",
+    "* A block size of 64\n",
+    "\n",
+    "This configuration will be used to train and evaluate the model on the entire dataset as well."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
