Update html export of local notebook

--- a/notebooks/local.ipynb
+++ b/notebooks/local.ipynb
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1167,15 +1167,14 @@
    "source": [
     "# Closing words\n",
     "\n",
-    "The multilayer perceptron seems to be performing the best on the small dataset used here with an f1-score of 0.785. \n",
+    "The multilayer perceptron seems to be performing the best on the small dataset used here with an f1-score of 0.795 and a favorable confusion matrix. \n",
     "The configuration used to achieve these results are :\n",
     "* 5 nodes in the input layer\n",
     "* 4 nodes in the first intermediate layer\n",
-    "* 4 nodes in the second intermediate layer\n",
     "* 2 nodes in the output layer\n",
-    "* A block size of 64\n",
+    "* A block size of 32\n",
     "\n",
-    "This configuration will be used to train and evaluate the model on the entire dataset as well."
+    "This configuration should be used to train and evaluate the model on the entire dataset as well."
    ],
    "cell_type": "markdown",
    "metadata": {}
