Add short reason for using the F-Score

--- a/notebooks/databricks.ipynb
+++ b/notebooks/databricks.ipynb
@@ -327,6 +327,8 @@
     "    '''\n",
     "        summary:\n",
     "            Evaluates the performance of a model using the f1-score.\n",
+    "            f1-score is chosen as it provides a good balance between\n",
+    "            recall and precision.\n",
     "        args:\n",
     "            model - model to be evaluated\n",
     "            data - test data set to use\n",
